--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,8 @@
 body {
   text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: coral;
+}
+a {
+  margin-right: 15px;
 }
